Working on checking for S2R input